# places-cli

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  Readme.md  build.rs  crates-io-readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  release.yml
src/: cli.rs  main.rs
support/completions/: _places  _places.ps1  places.bash  places.elv  places.fish
support/manpage/: places.1  places.md
