[package]
name = "places-cli"
version = "0.1.0"
description = "A cli program to get file and directory locations from XDG"
authors = ["Tsagatakis Yianis <tsagatakis@protonmail.com>"]
repository = "https://github.com/jtsagata/places-cli"
license = "GPL-3.0"
keywords = ["cli", "xdg"]
edition = "2021"

readme = "README.md"

[[bin]]
name = "places"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.6", features = ["derive", "cargo"] }
directories = "5.0.1"

[build-dependencies]
clap = { version = "4.5.6", features = ["derive", "cargo"] }
clap_mangen = "0.2.21"
clap_complete = "4.5.5"
