[package]
name = "places-cli"
version = "0.1.1"
authors = ["Tsagatakis Yianis <tsagatakis@protonmail.com>"]
license = "GPL-3.0"
description = "A cli program to get file and directory locations from XDG"
repository = "https://github.com/jtsagata/places-cli"
homepage = "https://github.com/jtsagata/places-cli"
readme = "crates-io-readme.md"
categories = ["command-line-utilities"]
keywords = ["cli", "xdg"]
edition = "2021"


[[bin]]
name = "places"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "cargo"] }
directories = "5.0.1"

[build-dependencies]
clap = { version = "4.5.7", features = ["derive", "cargo"] }
clap_mangen = "0.2.21"
clap_complete = "4.5.5"

[profile.release]
lto = true
